commentDiv fixed so that imginfocus doesn't truncate from bottom

--- a/css/own_style.css
+++ b/css/own_style.css
@@ -1,3 +1,53 @@
+
+/* Eric Meyer's CSS RESET */
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+    display: block;
+}
+body {
+    line-height: 1;
+}
+ol, ul {
+    list-style: none;
+}
+blockquote, q {
+    quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+    content: '';
+    content: none;
+}
+table {
+    border-collapse: collapse;
+    border-spacing: 0;
+}
+
+/* Stops here */
+
+
+
 .image {
     width: 100%;
 }
@@ -37,7 +87,7 @@ body {
 .roundabout-in-focus .imgContainer {
     padding: 00px;
     /*background-color: black;*/
-    height: 65%;
+    height: 70%;
     margin-top: 0%;
     overflow: hidden;
 }
@@ -46,7 +96,7 @@ body {
 .slide {
 }
 
-.roundabout-moveable-item .imgContainer img {
+.roundabout-moveable-item .imgContainer .image {
     height: auto;
     width: 100%;
     background-color: white;
@@ -68,7 +118,6 @@ back to default */
     padding: 0px;
     color: ThreeDDarkShadow;
     font-family: 'Droid Sans', sans-serif;
-    font-size: 10px;
     display:hidden;
     overflow: hidden;
 }
@@ -80,7 +129,7 @@ back to default */
     padding: 0px;
     color: ThreeDDarkShadow;
     font-family: 'Carrois Gothic', sans-serif;
-    font-size: 10px;
+    font-size: 20px;
     overflow: auto;
     -webkit-transition: all 0s ease-in-out 0s; /* this is so all properties animate
 back to default */
@@ -113,8 +162,7 @@ h1{
     color: ThreeDDarkShadow;
     font-family: 'Carrois Gothic', sans-serif;
     font-size: 10px;
-    -webkit-transition: all 0s ease-in-out 0s; /* this is so all properties animate
-back to default */
+    -webkit-transition: all 0s ease-in-out 0s; /* this is so all properties animate back to default */
     -moz-transition: all 0s ease-in-out 0s;
     -o-transition: all 0s ease-in-out 0s;
     transition: all 0s ease-in-out 0s;
